HSEARCH-798 Make logging report reproducible
i.e. fields printed in the same order all the time